[project]
name = "cascade-rest"
version = "0.1.0"
description = "CLI for Cascade Server REST API operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "requests>=2.32.4",
    "aiohttp>=3.9.0",
    "tabulate>=0.9.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "schedule>=1.2.0",
]
